2012-12-06  Evgeny V. Kokovikhin
	* main/DAOs/GenericDAO.class.php 
		meta/builders/AutoDaoBuilder.class.php 
		meta/builders/BaseBuilder.class.php:
			dbLink became a property

2012-11-25  Alexey S. Denisov

	* core/Form/Primitives/PrimitiveIdentifier.class.php
		core/Form/Primitives/PrimitiveIdentifier.class.php:
			PrimitiveIdentifier now can export/import objects by custom methods

2012-11-18  Nikita V. Konstantinov

	* meta/types/ObjectType.class.php:
		update for Business objects - now you can setSomeProperty(null)
		for Objects properties if it's not required

2012-10-24  Alexey S. Denisov
	* main/Flow/CarefulDatabaseRunner.class.php
		main/UnifiedContainer/UnifiedContainer.class.php:
			CarefulDatabaseRunner and UnifiedContainer will use InnerTransaction

2012-10-24  Alexey S. Denisov
	* global.inc.php.tpl
		main/Autoloader/Autoloader.class.php
		main/Autoloader/AutoloaderClassNotFound.class.php
		main/Autoloader/AutoloaderClassPathCache.class.php
		main/Autoloader/AutoloaderNoCache.class.php
		main/Autoloader/AutoloaderPool.class.php
		main/Autoloader/AutoloaderRecachable.class.php
		main/Autoloader/AutoloaderWithNamespace.class.php
		main/Autoloader/NamespaceDirScaner.class.php
		main/Autoloader/NamespaceDirScanerOnPHP.class.php
		main/Autoloader/NamespaceDirScanerPSR0.class.php
		main/Autoloader/NamespaceResolver.class.php
		main/Autoloader/NamespaceResolverOnPHP.class.php
		main/Autoloader/NamespaceResolverPSR0.class.php
		main/Autoloader/require.inc.php
		meta/bin/build.php
		meta/classes/MetaConfiguration.class.php
		misc/Autoloader.inc.php
		misc/BaseException.inc.php:
			New Autoloader which work without include_paths and use optional namespaces

2012-09-29	Alexey S. Denisov

	* core/DB/DB.class.php
		core/DB/Dialect.class.php
		core/DB/ImaginaryDialect.class.php
		core/DB/LiteDialect.class.php
		core/DB/LitePDODialect.class.php
		core/DB/MyDialect.class.php
		core/DB/MyImprovedDialect.class.php
		core/DB/MySQL.class.php
		core/DB/MySQLim.class.php